fixed the buttons and some spacing

--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,6 @@ body {
 #header-container p {
     display: flex;
     justify-content: center;
-
     border: 1px solid black;
     height: 35px;
     width: 100%;
@@ -110,7 +109,7 @@ body {
     height: 25px;
     font-size: 1.1em;
     padding-top: 2px;
-    background-color: white;
+    background-color: red;
     color: black;
 }
 
@@ -178,7 +177,7 @@ body {
 
 
     border: 0;
-    background-color:white;
+    background-color:black;
     margin-bottom: 15px;
     margin-top: 15px;
     border: 3px solid black;
@@ -257,7 +256,7 @@ table td {
         float: right;
         margin-right: 0px;
         margin-left: auto;
-        position: relative; top: -300px;
+        position: relative; top: -250px;
     }
     #purchaseInfo{
         /* display: flex; */
@@ -270,11 +269,14 @@ table td {
         margin-right: auto;
         margin-left: 0px;
         /* margin-bottom: 0px; */
+        position: relative; top: 50px;
     }
 
     .gif{
         display: block;
         position: relative; top: -300px;
+        margin-bottom: 0px;
+        padding-bottom: 0px;
     }
 
 }
